<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item
    android:title="Create your new group"
    android:id="@+id/YNG"

    />
    <item
        android:title="@string/settings"
        android:icon="@drawable/ic_settings_black_24dp"
        app:showAsAction="ifRoom"
        android:id="@+id/ST"

        />
    <item
        android:title="@string/search"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="always"
        android:id="@+id/S"

        />
    <item
        android:title="Bored? click here to logout"
        android:id="@+id/Logout"

        />
    <item
        android:title="@string/starred_messages"
        android:id="@+id/SM"

        />
    <item
        android:title="Find the ship you wanna ride on"
        android:id="@+id/Find_contact"

        />

</menu>