<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome"
    tools:context=".Register">
    <ImageView
        android:id="@+id/Register_Image"
        android:layout_width="409dp"
        android:layout_height="264dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/cute"
        android:padding="4dp"
        android:paddingStart="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"

        android:scaleType="fitCenter" />


    <EditText
        android:id="@+id/Register_eMail"
        android:layout_width="wrap_content"
        android:layout_height="66dp"
        android:layout_below="@id/Register_Image"
        android:layout_alignParentStart="true"

        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="-11dp"
        android:layout_marginRight="-11dp"
        android:autofillHints="xxx@gmail.com"
        android:background="@drawable/res2"
        android:drawableStart="@drawable/email"
        android:drawableLeft="@drawable/email"
        android:hint="@string/xxx_gmail_com"
        android:inputType="textEmailAddress"
        android:padding="4dp"
        android:textColor="#000000">


    </EditText>

    <EditText
        android:id="@+id/RegisterPassword"
        android:layout_width="wrap_content"
        android:layout_height="66dp"
        android:layout_below="@+id/Register_eMail"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:autofillHints="dfndkjnvj12311"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:background="@drawable/res2"
        android:drawableStart="@drawable/password"
        android:drawableLeft="@drawable/password"
        android:hint="@string/xxxxxxxx"
        android:inputType="textVisiblePassword"
        android:padding="4dp"
        android:textColor="#000000">

    </EditText>

    <Button
        android:id="@+id/RegisterButton"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_below="@+id/RegisterPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="37dp"
        android:layout_marginRight="37dp"
        android:background="@color/colorPrimaryDark"
        android:paddingLeft="107dp"
        android:paddingRight="107dp"
        android:text="@string/click_for_new_account"
        android:textSize="10sp"
        android:textStyle="bold">

    </Button>
    <TextView
        android:id="@+id/AlredyHaveLoginAccount"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RegisterButton"

        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="101dp"
        android:layout_marginLeft="101dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="-87dp"
        android:layout_marginRight="-87dp"
        android:padding="4dp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/green"
        android:textSize="15sp"
        android:textStyle="bold">

    </TextView>
</RelativeLayout>