<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".Login">

    <ScrollView
        android:layout_width="match_parent"

        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/Login_Image"
                android:layout_width="338dp"
                android:layout_height="181dp"
                android:contentDescription="@string/cute"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="73dp"
                android:layout_marginLeft="73dp"
                android:layout_marginTop="0dp"
                android:paddingStart="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"

                android:scaleType="fitCenter" />

            <EditText
                android:id="@+id/Login_eMail"
                android:layout_width="401dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Login_Image"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="19dp"
                android:autofillHints="jfrf12@gmail.com"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:background="@drawable/res2"
                android:drawableStart="@drawable/email"
                android:drawableLeft="@drawable/email"
                android:hint="@string/xxx_gmail_com"
                android:inputType="textEmailAddress"
                android:padding="4dp"
                android:textColor="#000000">

            </EditText>

            <EditText
                android:id="@+id/Password"
                android:layout_width="wrap_content"
                android:layout_height="66dp"
                android:layout_below="@+id/Login_eMail"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="34dp"
                android:layout_marginEnd="6dp"
                android:layout_marginRight="6dp"
                android:background="@drawable/res2"
                android:autofillHints="advgrgtr"
                android:drawableStart="@drawable/password"
                android:drawableLeft="@drawable/password"
                android:hint="@string/xxxxxxxx"
                android:inputType="textVisiblePassword"
                android:padding="4dp"
                android:textColor="#000000">
            </EditText>

            <TextView
                android:id="@+id/ForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Login_eMail"

                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="200dp"
                android:layout_marginLeft="200dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="-186dp"
                android:layout_marginRight="-186dp"
                android:padding="4dp"
                android:text="@string/forgot_password"
                android:textColor="@color/dark"
                android:textSize="12sp"
                android:textStyle="bold">

            </TextView>

            <Button
                android:id="@+id/LoginButton"
                android:layout_width="100dp"
                android:layout_height="68dp"
                android:layout_below="@+id/Password"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:background="@color/colorPrimary"
                android:paddingLeft="107dp"
                android:paddingRight="107dp"
                android:text="@string/click_tologin"
                android:textSize="15sp"
                android:textStyle="bold">

            </Button>

            <TextView
                android:id="@+id/NewAccount"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/LoginButton"

                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="138dp"
                android:layout_marginLeft="138dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="-124dp"
                android:layout_marginRight="-124dp"
                android:padding="4dp"
                android:text="@string/need_new_account"
                android:textColor="@color/dark"
                android:textSize="15sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/PhoneAccount"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/NewAccount"

                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="101dp"
                android:layout_marginLeft="101dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="-87dp"
                android:layout_marginRight="-87dp"
                android:padding="4dp"
                android:text="@string/or_login_using_phone_number"
                android:textColor="#000000"
                android:textSize="15sp">

            </TextView>

            <Button
                android:id="@+id/PhoneButton"
                android:layout_width="30dp"
                android:layout_height="50dp"
                android:layout_below="@+id/PhoneAccount"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="17dp"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="21dp"
                android:layout_marginRight="21dp"
                android:background="@color/colorPrimary"
                android:drawableStart="@drawable/phone"
                android:drawableLeft="@drawable/phone"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/contact_number_login"
                android:textSize="15sp"
                android:textStyle="bold">

            </Button>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>